fixed mobile bug with moving whole page to the right which created a small gap but very vivsible gap, also changed floating text appearance to smaller block, increased font size of h1 and h2 element near offer

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -189,16 +189,17 @@ header
   display: flex
   justify-content: center
   align-items: center
-  transition: all .5s
-  opacity: 0
-  transform: translate(35vw, 0)
+  overflow: hidden
   .popup
     height: 2vw
     width: 30vw
     display: flex
     align-items: center
     justify-content: space-between
-    margin-top: 4vw
+    transition: all .5s
+    opacity: 0
+    transform: translate(35vw, 0)
+    // margin-top: 4vw
     .wrapper-icons
       display: flex
       justify-content: space-between
@@ -214,7 +215,7 @@ header
         height: 100%
 #popup-control
   display: none
-#popup-control:checked ~ .popup-wrap
+#popup-control:checked ~ .popup-wrap .popup
   opacity: 1
   transform: translate(0, 0)
 
@@ -459,10 +460,14 @@ header
       transform: rotate(-45deg)
   
 @keyframes rotator
+  50%
+    transform: rotateY(-85deg) rotateZ(-180deg) // had to add this step because it wasn't working porperly in browsers like safari or IE
   100%
     transform: rotateY(-85deg) rotateZ(-360deg)
   
 @keyframes fixer
+  50%
+    transform: rotateY(90deg) rotateX(-180deg) // had to add this step because it wasn't working porperly in browsers like safari or IE
   100%
     transform: rotateY(90deg) rotateX(-360deg)
   
@@ -921,7 +926,7 @@ header
     transition: all .5s !important
   header
     height: auto
-    margin-bottom: 10vh
+    margin-bottom: 6vh
     nav
       height: auto
       width: 100%
@@ -939,12 +944,13 @@ header
           margin: 8vw 0 0 0
       .navigation
         display: block
-        width: 100vw
+        width: 100%
         height: auto
         margin-top: calc(5vh + 6vw)
         li
           text-align: center
           width: 100%
+          height: auto
           opacity: 0
         li:hover
           border: none
@@ -958,11 +964,12 @@ header
     .svg-wrapper
       display: none
     h1
-      margin: 5vh 0 0 0
+      margin: 5vh 0 2vh 0
     h2
       margin: 0
     h1, h2
-      font-size: 3rem
+      font-size: 4.5rem
+      padding: 0 8vw
     .alakazam-mobile
       display: flex
       width: 100vw
@@ -984,9 +991,9 @@ header
         font-size: 3.75rem
       .counter-wrapper
         margin-bottom: 5vh
-  .floating-icons-wrapper
-    display: none
-
+  .made-with-css-wrapper
+    display: flex
+    height: calc(8vw + 2vh)
   section .works-mob
     display: grid
     grid-template-columns: repeat(1, 1fr)
